Bug 176637 Custom link colors not rendered correctly patch by durbacher@gmx.de (Andreas Kunz) r=dbaron sr=bz